# lifuren

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.en.md  README.md
boot/: CMakeLists.txt  README.md
boot/config/: config-win.yml  config.yml
boot/include/lifuren/: Client.hpp  Config.hpp  Date.hpp  File.hpp  Logger.hpp  Message.hpp  MusicScore.hpp  Raii.hpp  String.hpp  Thread.hpp  Yaml.hpp
boot/main/: CMakeLists.txt  win.rc
boot/main/resources/: win.rc
boot/main/src/: Embedding.cpp  Main.cpp
boot/ml/: CMakeLists.txt
boot/ml/src/: Main.cpp
boot/ml/test/: CMakeLists.txt  Test.cpp  TestActivationFunction.cpp  TestBoot.cpp  TestFltk.cpp  TestLibTorchActivationFunction.cpp  TestLibTorchLinearRegression.cpp  TestLibTorchMatrix.cpp  TestLibTorchMnist.cpp  TestLibTorchNN.cpp  TestLibTorchTensor.cpp  TestLinearRegression.cpp  TestLoadFile.cpp  TestMLPackLinearRegression.cpp  TestMLPackLoadFile.cpp  TestMLPackLogisticRegression.cpp  TestMLPackMatrix.cpp  TestMLPackSoftmaxRegression.cpp  TestMatrix.cpp  TestNN.cpp  TestOpenCV.cpp  TestOpenCVColor.cpp  TestOpenCVFace.cpp
boot/src/: Client.cpp  Config.cpp  Date.cpp  File.cpp  Logger.cpp  Message.cpp  MusicScore.cpp  String.cpp  Thread.cpp  Yaml.cpp
boot/src/header/: GLog.hpp  Label.hpp  Mark.hpp  Setting.hpp
boot/src/source/: Label.cpp  Mark.cpp  Setting.cpp
boot/test/: CMakeLists.txt
boot/test/include/: Test.hpp
boot/test/src/: Main.cpp  TestBoot.cpp  TestCore.cpp  TestCoreCollections.cpp  TestCoreDates.cpp  TestCoreFiles.cpp  TestCorePoetry.cpp  TestDates.cpp  TestFltk.cpp  TestLibTorchActivationFunction.cpp  TestLibTorchCUDA.cpp  TestLibTorchGenderHandler.cpp  TestLibTorchLayer.cpp  TestLibTorchLinearRegression.cpp  TestLibTorchMnist.cpp  TestLibTorchModel.cpp  TestLibTorchTensor.cpp  TestLibTorchVGG.cpp  TestMLPackLinearRegression.cpp  TestMLPackLogisticRegression.cpp  TestMLPackMatrix.cpp  TestMLPackSoftmaxRegression.cpp  TestOpenCV.cpp  TestOpenCVColor.cpp  TestOpenCVFace.cpp  TestOpenCVResize.cpp  TestPoetry.cpp
boot/yuzan/: CMakeLists.txt
boot/yuzan/src/: Main.cpp
cli/: CMakeLists.txt
cli/include/lifuren/: CLI.hpp
cli/resources/: win.rc
cli/src/: CLI.cpp  Main.cpp
client/: CMakeLists.txt  README.md
client/include/lifuren/: Client.hpp  GUI.hpp
client/main/: CMakeLists.txt
client/main/resources/: win.rc
client/main/src/: Main.cpp
client/src/: Client.cpp  Main.cpp  RestClient.cpp  StatefulClient.cpp
client/src/cli/: CLI.cpp
client/src/gui/: AboutWindow.cpp  MainWindow.cpp
client/src/header/: Client.hpp
client/src/source/: Client.cpp  CommandClient.cpp  EmbeddingClient.cpp  RAGClient.cpp  RestChatClient.cpp  RestClient.cpp  StatefulClient.cpp
client/test/: CMakeLists.txt
client/test/src/: TestClassify.cpp  TestDataset.cpp  TestLibtorch.cpp  TestWudaozi.cpp
client/tutorial/: Conda.md  LibTorch.md  Template.md
client/webview/: README.md  icomoon.eot  index.html  jianpu.js  lifuren.js  opensheetmusicdisplay.min.js  package.json  player.js  score.js  style.css
core/: CMakeLists.txt  README.md
core/config/: config-win.yml  config.yml  rhythm.yml
core/include/lifuren/: Audio.hpp  AudioModel.hpp  Client.hpp  Config.hpp  Dataset.hpp  Date.hpp  Exception.hpp  File.hpp  Files.hpp  Image.hpp  ImageModel.hpp  Layer.hpp  Lifuren.hpp  Logger.hpp  Message.hpp  Model.hpp  Raii.hpp  Score.hpp  ScoreModel.hpp  String.hpp  Thread.hpp  Torch.hpp  Trainer.hpp  Wudaozi.hpp  WudaoziModel.hpp  Yaml.hpp  Yamls.hpp
core/src/: Config.cpp  Dataset.cpp  Date.cpp  Dates.cpp  File.cpp  Files.cpp  Image.cpp  ImageDataset.cpp  Layer.cpp  Lifuren.cpp  Logger.cpp  Message.cpp  Rhythm.cpp  String.cpp  Strings.cpp  Thread.cpp  Torch.cpp  Wudaozi.cpp  Yaml.cpp
core/src/audio/: Audio.cpp  AudioDataset.cpp  AudioModel.cpp
core/src/config/: audio.json  audio.yml  client.yml  config-dev.yml  config-win.yml  config.yml  image.json  image.yml  poetry.json  poetry.yml  rhythm.yml  settings.json  video.json  video.yml
core/src/dataset/: AudioDataset.cpp  Dataset.cpp  FileDataset.cpp  ImageDataset.cpp  RawDataset.cpp  ScoreDataset.cpp
core/src/header/: Audio.hpp  AudioGC.hpp  AudioTS.hpp  Collections.hpp  Dates.hpp  Files.hpp  Format.hpp  GLog.hpp  Image.hpp  ImageGC.hpp  ImageTS.hpp  Jsons.hpp  LFRModel.hpp  Label.hpp  Lifuren.hpp  Logger.hpp  Mark.hpp  Model.hpp  Poetry.hpp  PoetryGC.hpp  PoetryTS.hpp  Ptr.hpp  Ref.hpp  Setting.hpp  Strings.hpp  Utils.hpp  Video.hpp  VideoGC.hpp  VideoTS.hpp
core/src/image/: Image.cpp  ImageDataset.cpp  ImageModel.cpp
core/src/score/: Score.cpp  ScoreModel.cpp
core/src/setting/: settings.json
core/src/source/: Collections.cpp  Config.cpp  Dates.cpp  Exception.cpp  Files.cpp  GLog.cpp  Jsons.cpp  LFRModel.cpp  Label.cpp  LabelConfig.cpp  LabelFile.cpp  LabelSegment.cpp  LabelText.cpp  Lifuren.cpp  Logger.cpp  Mark.cpp  MarkFile.cpp  MarkText.cpp  Model.cpp  Poetrys.cpp  Rhythm.cpp  Setting.cpp  Settings.cpp  Strings.cpp  Yamls.cpp
core/src/video/: VideoDataset.cpp
cv/: CMakeLists.txt  README.md
cv/include/lifuren/: ActClient.hpp  Audio.hpp  ComposeClient.hpp  Image.hpp  ImageDataset.hpp  Images.hpp  PaintClient.hpp  PaintModel.hpp  Video.hpp
cv/src/: ActClient.cpp  CV.cpp  ComposeClient.cpp  Image.cpp  ImageDataset.cpp  ImageDatasets.cpp  Images.cpp  OpenCV.cpp  PaintClient.cpp
launcher/ml/: CMakeLists.txt
launcher/yuzan/: CMakeLists.txt
model/: CMakeLists.txt  README.md
model/src/: Dataset.cpp  Layer.cpp  Layers.cpp  Model.cpp  OnnxRuntime.cpp  Tensor.cpp  Tensors.cpp  Torch.cpp
nlp/: CMakeLists.txt  README.md
nlp/src/: EmbeddingClient.cpp  PoetizeClient.cpp  Poetry.cpp  PoetryDataset.cpp  Poetrys.cpp  RAGClient.cpp  RAGService.cpp  RAGTaskRunner.cpp
test/: CMakeLists.txt
test/src/: TestClassify.cpp  TestDataset.cpp  TestLibtorch.cpp  TestWudaozi.cpp
xx/: CMakeLists.txt  README.md
xx/glog/: CMakeLists.txt
xx/libtorch/: CMakeLists.txt
xx/ml/: CMakeLists.txt
xx/pytorch/: CMakeLists.txt
xx/src/: Main.cpp
xx/template/: CMakeLists.txt
xx/test/: CMakeLists.txt
xx/torch/: CMakeLists.txt  Cul.cpp  example.cpp
(+987 files in other folders)
